# irs-machine

./: .gitignore  CMakeLists.txt  README.md  irs-machine.ini
data/: o.json
data/alpha/: en.irs  fra.irs  it.irs
data/langs/: en.irs  fra.irs  ge.irs  it.irs
irs-memory/: CMakeLists.txt  irs_memory.c  irs_memory.h
irs-memory/irs-data/: CMakeLists.txt
irs-memory/irs-data/irs-base/: irs_allocator.h
irs-memory/irs-data/irs-container/: irs_struct_node.c
irs-memory/irs-data/irs-container/irs-dictionary/: irs_dictionary.c  irs_dictionary_private.h
irs-memory/irs-data/irs-container/irs-iterator/: irs_iterator.h
irs-memory/irs-data/irs-container/irs-list/: irs_list.c  irs_list.h
irs-memory/irs-data/irs-container/irs-pair/: irs_pair.h
irs-memory/irs-data/irs-container/irs-string/: irs_string.h
irs-memory/irs-engine/: CMakeLists.txt  irs_engine.c  irs_engine.h
irs-memory/irs-storage/: CMakeLists.txt  irs_storage.c  irs_storage.h
irs-memory/irs-storage/irs-base/: irs_message.h  irs_types.h
irs-memory/irs-storage/irs-container/: irs_struct_node.h
irs-memory/irs-storage/irs-container/irs-dictionary/: irs_dictionary.c  irs_dictionary.h  irs_dictionary_private.h
irs-memory/irs-storage/irs-container/irs-iterator/: irs_iterator.c  irs_iterator.h
irs-memory/irs-storage/irs-container/irs-list/: irs_list.c  irs_list.h
irs-memory/irs-storage/irs-container/irs-pair/: irs_pair.h
irs-memory/irs-storage/irs-container/irs-string/: irs_string.h
irs-memory/irs-storage/irs-file-system/: irs_file_system.c  irs_file_system.h
irs-memory/irs-storage/irs-file-system/irs-io/: irs_io.h
irs-memory/tests/: CMakeLists.txt  irs_engine_bench_tests.c  irs_engine_tests.c  irs_storage_bench_tests.c  irs_storage_tests.c
irs-server/: CMakeLists.txt  irs_server_factory.cpp  irs_server_factory.hpp  irs_signal_handler.cpp  irs_signal_handler.hpp  main.cpp
irs-server/irs-config/: CMakeLists.txt  irs_config.c  irs_config.cpp  irs_config.h  irs_config.hpp  irs_options.hpp
irs-server/src/: CMakeLists.txt  irs_server.hpp  irs_server_action_defines.hpp  irs_server_defines.hpp  irs_server_impl.cpp  irs_server_impl.hpp  irs_server_log.hpp
irs-server/src/irs-server-action/: irs_memory_json_handler.cpp  irs_memory_json_handler.hpp  irs_memory_json_payload.hpp  irs_server_action.hpp  irs_server_command_defines.hpp  irs_server_message_action.hpp
irs-server/src/irs-server-action/irs-memory/: irs_memory.cpp  irs_memory.hpp
irs-server/src/irs-server-action/irs-memory-command/: irs_memory_add_documents_command.hpp  irs_memory_get_documents_command.hpp  irs_memory_get_documents_langs_command.hpp  irs_memory_get_documents_summarizations_command.hpp  irs_memory_json_command.hpp
